@@ -1,5 +1,9 @@
 2006-01-21  Thomas Wood  <thos@gnome.org>
 
+	* engines/crux/src/crux-draw.c: (draw_check): Add insensitive state
+
+2006-01-21  Thomas Wood  <thos@gnome.org>
+
 	* engines/crux/src/crux-draw.c: (paint_stock_image),
 	(paint_shadow), (paint_default), (paint_arrow), (draw_box),
 	(draw_polygon), (draw_arrow), (draw_check), (draw_focus),
